- Modified main wiki, deleted beta blue button and only left the green button to download the lastest Beta version 005, 006.. Also created a new link to download the original non working version of TGM below all beta versions, in case someone needs it. This will prevent users from downloading outdated versions and submitting fixed issues to the bug tracker.

--- a/web/trunk/static/Main.wiki.html
+++ b/web/trunk/static/Main.wiki.html
@@ -2,8 +2,7 @@
     This page is an ongoing WIP where we'll try to present the same information
     in a way that urges users to adopt tgm or to contribute to it in some way.
     Let's write HTML wherever we can, for the purposes of readability and
-    maintainability.  Working incrementally from top to bottom.  I hate this
-    wiki comment crap!!!  John 201308302146 -4
+    maintainability.  Working incrementally from top to bottom. John 201308302146 -4
 </wiki:comment>
 <font color="#44444">
 <wiki:comment>
@@ -45,16 +44,10 @@
             <p><strong>Automatic backups</strong> integrate seamlessly to improve your Firefox sessions.</p>
             <p><strong>!TabGroups Manager</strong> brings organization and efficiency to your browser.</p>
         </td>
-        <td valign="top" width="30%">
-            <h2>Experience TGM.</h2>
-            <p>Try Axel's !TabGroups Manager, now with compatibility updates.</p>
-            <wiki:comment>Some sort of strange markdown parsing here, John 201309100248 -4</wiki:comment>
-            <a href="http://j.mp/tgm-s01">https://tabgroupsmanager.googlecode.com/svn/__static/web/100/media/add-to-firefox.png</a>
-        </td>
-        <td valign="top" width="30%">
-            <h2>Experience Beta.</h2>
+        <td valign="top" width="60%">
+            <h2>Experience lastest compatibility updates.</h2>
             <p>Be cautious, keep backups, and try the latest builds.  Tell us how continuous compatibility updates work for you!</p>
-            <a href="http://j.mp/beta_005">https://tabgroupsmanager.googlecode.com/svn/__static/web/100/media/add-to-firefox_qa.png</a>
+            <a href="http://j.mp/beta_005">https://tabgroupsmanager.googlecode.com/svn/__static/web/100/media/add-to-firefox.png</a>
             <div></div>
             <div><font color="7D7D7D" size="1">Lastest Beta, v105. (Firefox +33 and TabMixPlus compatible)</font></div>
             <a href="https://tabgroupsmanager.googlecode.com/svn/product/trunk/CHANGELOG"><font color="7D7D7D" size="1">CHANGELOG</font></a>
@@ -64,6 +57,7 @@
                 <tr><td><a href="http://j.mp/beta_004_lastest"><font color="7D7D7D" size="1">Beta v104</font></a></td></tr>
                 <tr><td><a href="http://j.mp/beta_003"><font color="7D7D7D" size="1">Beta v103</font></a></td></tr>
                 <tr><td><a href="http://j.mp/tgm-b01"><font color="7D7D7D" size="1">Beta v102</font></a></td></tr>
+                <tr><td><a href="http://j.mp/tgm-s01"><font color="7D7D7D" size="1">Original TGM - </font></a><font color="7D7D7D" size="1"> (doesnt work)</font></td></tr>
             </table>
         </td>
     </tr>
